// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/ContactsField render should have scrollable dropdown if contacts > 5 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  className="scrollable"
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onInput={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
      Object {
        "email": "a@example.com",
        "id": "12",
        "text": "a b",
        "type": "user",
        "value": "a@example.com",
      },
      Object {
        "email": "b@example.com",
        "id": "13",
        "text": "a b",
        "type": "user",
        "value": "b@example.com",
      },
      Object {
        "email": "c@example.com",
        "id": "14",
        "text": "a c",
        "type": "user",
        "value": "c@example.com",
      },
      Object {
        "email": "d@example.com",
        "id": "14",
        "text": "a d",
        "type": "user",
        "value": "d@example.com",
      },
      Object {
        "email": "e@example.com",
        "id": "14",
        "text": "a e",
        "type": "user",
        "value": "e@example.com",
      },
    ]
  }
  validateForError={[MockFunction]}
  validator={[MockFunction]}
>
  <ContactDatalistItem
    key="12345"
    name="X User"
    subtitle="x@example.com"
  />
  <ContactDatalistItem
    key="23456"
    name="Y User"
    subtitle="y@example.com"
  />
  <ContactDatalistItem
    key="34567"
    name="Z User"
    subtitle="z@example.com"
  />
  <ContactDatalistItem
    key="12"
    name="a b"
    subtitle="a@example.com"
  />
  <ContactDatalistItem
    key="13"
    name="a b"
    subtitle="b@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a c"
    subtitle="c@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a d"
    subtitle="d@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a e"
    subtitle="e@example.com"
  />
</PillSelectorDropdown>
`;

exports[`features/unified-share-modal/ContactsField render should render default component 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  className=""
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onInput={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
    ]
  }
  selectorOptions={Array []}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
/>
`;
